# deadpool_fastembed

./: .releaserc  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
src/: config.rs  lib.rs
